[metadata]
name = pypotage
version = v0.1.1.1-alpha
author = Pavalso
author_email = author@example.com
description = Beans is a simple and lightweight Python library based on Spring Framework. It provides a simple way to manage beans and their dependencies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavalso/potage
project_urls =
    Bug Tracker = https://github.com/pavalso/potage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
