[metadata]
name = pypotage
version = v0.1.2-alpha
author = Pavalso
license = MIT
description = A simple Python package that provides an easy way to use Dependency Injection in your projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavalso/potage
project_urls =
    Bug Tracker = https://github.com/pavalso/potage/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typing_extensions==4.11.0

[options.packages.find]
where = src
