[metadata]
name = pypotage
version = v2.0.0.1-alpha
author = Pavalso
license = MIT
description = A simple Python package that provides an easy way to use Dependency Injection in your projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavalso/potage
project_urls =
    Bug Tracker = https://github.com/pavalso/potage/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typing_extensions==4.11.0
    objproxies==0.9.4

[options.extras_require]
dev =
    pytest==8.1.1
    pytest-cov==5.0.0
    Sphinx==7.3.7
    sphinx_press_theme==0.9.1
test =
    pytest==8.1.1
    pytest-cov==5.0.0
doc =
    Sphinx==7.3.7
    sphinx_press_theme==0.9.1

[options.packages.find]
where = src
